# STW-Utilitools

./: LICENSE.txt  README.md  bun.lockb  package.json
src/: index.html  main.js  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: backup.rs.txt  lib.rs  main.rs  offsets.json  settings.json
src/assets/: BackgoundLogic.js  BackgroundMain.html
