[package]
name = "STW-utilitools"
version = "0.1.0"
description = "A simple utility tool for made to easily modify the STW game files."
authors = ["GitanElyon"]
edition = "2021"
repository = "https://github.com/GitanElyon/STW-Utilitools"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "utilitools_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
dirs = "4.0"
native-dialog = "0.7"

